--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,11 +16,11 @@
     width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova || htmlWebpackPlugin.options.ctx.mode.capacitor)
     { %>, viewport-fit=cover<% } %>" />
 
-  <link rel="icon" type="image/png" href="statics/app-logo-128x128.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/favicon-96x96.png" />
-  <link rel="icon" type="image/ico" href="statics/icons/favicon.ico" />
+  <link rel="icon" type="image/png" href="statics/logo.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="statics/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="statics/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="statics/favicon-96x96.png" />
+  <link rel="icon" type="image/ico" href="statics/favicon.ico" />
 </head>
 
 <body>
