--- a/src/index.template.html
+++ b/src/index.template.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-  <title><%= productName %></title>
+  <title>
+    <%= productName %>
+  </title>
 
   <meta charset="utf-8" />
   <meta name="description" content="<%= productDescription %>" />
@@ -21,6 +23,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png" />
   <link rel="icon" type="image/ico" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="icons/apple-icon-180x180.png">
 </head>
 
 <body>
