--- a/src/index.template.html
+++ b/src/index.template.html
@@ -17,6 +17,7 @@
     minimum-scale=1,
     width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor)
     { %>, viewport-fit=cover<% } %>" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <link rel="icon" type="image/png" href="app-logo-128x128.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
