--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     width=device-width"
     />
     <meta
-      name="apple-mobile-web-app-capable"
+      name="mobile-web-app-capable"
       content="yes"
     />
 
